--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,11 @@
     </header>
     <main>
         <div id='map'></div>
-
+        <div id="legend"></div>
+        <div id="scene-description">
+            <h2 id="scene-title">Bienvenido al Museo Digital</h2>
+            <p id="scene-text">Este es un proyecto de la comunidad de Palestina para el mundo. En este museo digital podrás conocer la historia y cultura de Palestina a través de sus escenas.</p>
+        </div>
         <button class="scene-button next-scene-button" onclick="nextScene()">Siguiente →</button>
         <button class="scene-button back-scene-button" onclick="previousScene()">← Atras</button>
 
