--- a/web/index.html
+++ b/web/index.html
@@ -21,6 +21,7 @@
         </div>
         <button class="scene-button next-scene-button" onclick="nextScene()">Siguiente →</button>
         <button class="scene-button back-scene-button" onclick="previousScene()">← Atras</button>
+        <progress id="progress-bar" value="0" max="100"></progress>
 
     </main>
     <footer>
@@ -29,6 +30,7 @@
 
     <script src="js/initializeMap.js"></script>
     <script src="js/scenesLoader.js"></script>
+    <script src="js/progressBar.js"></script>
     <script src="js/scenes.js"></script>
 </body>
 </html>
