--- a/web/index.html
+++ b/web/index.html
@@ -15,9 +15,10 @@
     <main>
         <div id='map'></div>
         <div id="legend"></div>
+        <span id="audio-toggle" onclick="toggleAudio()">🔊</span>
         <div id="scene-description">
-            <h2 id="scene-title">Bienvenido al Museo Digital</h2>
-            <p id="scene-text">Este es un proyecto de la comunidad de Palestina para el mundo. En este museo digital podrás conocer la historia y cultura de Palestina a través de sus escenas.</p>
+            <h2 id="scene-title"></h2>
+            <p id="scene-text"></p>
         </div>
         <button class="scene-button next-scene-button" onclick="nextScene()">Siguiente →</button>
         <button class="scene-button back-scene-button" onclick="previousScene()">← Atras</button>
@@ -35,6 +36,7 @@
     <script src="js/initializeMap.js"></script>
     <script src="js/scenesLoader.js"></script>
     <script src="js/progressBar.js"></script>
+    <script src="js/audio.js"></script>
     <script src="js/scenes.js"></script>
 </body>
 </html>
