--- a/web/index.html
+++ b/web/index.html
@@ -38,5 +38,7 @@
     <script src="js/progressBar.js"></script>
     <script src="js/audio.js"></script>
     <script src="js/scenes.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/easy-speech/dist/EasySpeech.iife.js"></script>
+
 </body>
 </html>
