--- a/web/index.html
+++ b/web/index.html
@@ -17,11 +17,12 @@
         <div id="legend"></div>
         <span id="audio-toggle" onclick="toggleAudio()">🔊</span>
         <div id="scene-description">
-            <h2 id="scene-title"></h2>
-            <p id="scene-text"></p>
+            <h2 id="scene-title">Bienvenido al museo digital por Palestina</h2>
+            <p id="scene-text">Haz click en Comenzar para ver la animación interactiva</p>
         </div>
-        <button class="scene-button next-scene-button" onclick="nextScene()">Siguiente →</button>
-        <button class="scene-button back-scene-button" onclick="previousScene()">← Atras</button>
+        <button id="start-button" class="scene-button start-scene-button" onclick="startScene()">Comenzar</button>
+        <button id="next-button" class="scene-button next-scene-button" onclick="nextScene()">Siguiente →</button>
+        <button id="previous-button" class="scene-button back-scene-button" onclick="previousScene()">← Atras</button>
         <div class="wrapper">
 			<div class="progress-bar">
 				<span id="progress-bar-fill" class="progress-bar-fill" style="width: 0%;"></span>
