Added more clarity to next scene button

--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
             <p id="scene-text">Haz click en Comenzar para ver la animación interactiva</p>
         </div>
         <button id="start-button" class="scene-button start-scene-button scale-in" onclick="startScene()">Comenzar</button>
-        <button id="next-button" class="scene-button next-scene-button" onclick="nextScene()">Siguiente →</button>
+        <button id="next-button" class="scene-button next-scene-button" onclick="nextScene()">Ver siguiente escena →</button>
         <button id="previous-button" class="scene-button back-scene-button" onclick="previousScene()">← Atras</button>
         <div class="wrapper">
 			<div class="progress-bar">
